Whitespace fixiä

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ body {
   //App.js:n pää container
   min-width: 75vw;
   min-height: 100vh;
+  background-color: $green;
 }
 
 .route-container{
